fix container size on mobile/tablet

--- a/wp-content/themes/Divi-child/assets/css/partials/propertyListingCards.scss
+++ b/wp-content/themes/Divi-child/assets/css/partials/propertyListingCards.scss
@@ -16,6 +16,10 @@
         }
     }
 
+    #main-content .container{
+        width: 90%;
+    }
+
     .epl-template-blog {
         display: flex;
         flex-wrap: wrap;
